Import translations for cherry-picked Bluetooth changes.
Change-Id: I03caaf58d9fd357801c05ae99b6131df992e7bdf

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"بلوتوث"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"قابل للاكتشاف"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"قابل للاكتشاف لمدة <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> ثانية…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"قابل للاكتشاف"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"جعل الجهاز قابل للاكتشاف"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"مهلة قابلية الاكتشاف"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"تعيين الوقت الذي يكون فيه الجهاز قابلاً للاكتشاف"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"تأمين الطلب الصوتي"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"منع استخدام طالب البلوتوث عندما تكون الشاشة مؤمّنة"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"أجهزة بلوتوث"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"طلب إذن بلوتوث"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"يطلب أحد التطبيقات في هاتفك إذنًا بتشغيل البلوتوث. هل تريد إجراء ذلك؟"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"يطلب أحد تطبيقات هاتفك إذنًا لجعل هاتفك قابلاً للاكتشاف بواسطة أجهزة البلوتوث الأخرى لمدة <xliff:g id="TIMEOUT">%1$d</xliff:g> ثانية. هل تريد إجراء ذلك؟"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"يطلب أحد التطبيقات على هاتفك إذنًا لجعل هاتفك \"قابلاً للاكتشاف دائمًا\" بواسطة أجهزة البلوتوث الأخرى. هل تريد إجراء ذلك؟"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"يطلب أحد تطبيقات هاتفك إذنًا لتشغيل البلوتوث وجعل هاتفك قابل للاكتشاف بواسطة أجهزة بلوتوث أخرى لمدة <xliff:g id="TIMEOUT">%1$d</xliff:g> ثانية. هل تريد إجراء ذلك؟"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"يطلب أحد تطبيقات هاتفك إذنًا لتشغيل البلوتوث وجعل هاتفك قابلاً للاكتشاف بواسطة أجهزة بلوتوث أخرى. هل تريد إجراء ذلك؟"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"جارٍ تشغيل البلوتوث..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"إعدادات التاريخ والوقت"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 م"</string>
