--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Откриваемо"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Откриваем за <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> секунди..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Откриваемо"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Устройството да стане откриваемо"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Време за изчакване за откриване"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Задаване на време, за което устройството ще бъде откриваемо"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Заключване на гласовото набиране"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Предотвратява употребата на набирането за Bluetooth при заключен екран"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth устройства"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Заявка за разрешение на Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Приложение от телефона ви иска разрешение да включи Bluetooth. Искате ли да направите това?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Приложение от телефона ви иска разрешение да го направи откриваем от други Bluetooth устройства за <xliff:g id="TIMEOUT">%1$d</xliff:g> секунди. Искате ли да направите това?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Приложение от телефона ви иска разрешение да го направи „постоянно откриваем“ от други Bluetooth устройства. Искате ли да направите това?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Приложение от телефона ви иска разрешение да включи Bluetooth и да го направи откриваем от други Bluetooth устройства за <xliff:g id="TIMEOUT">%1$d</xliff:g> секунди. Искате ли да направите това?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Приложение от телефона ви иска разрешение да включи Bluetooth и да го направи откриваем от други устройства. Искате ли да направите това?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Bluetooth се включва..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Настройки за дата и час"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
