--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Detectable"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Detectable durant <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> segons…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Detectable"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Fes que el dispositiu es pugui detectar"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Temps durant el qual és detectable"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Defineix durant quanta estona podrà detectar-se el dispositiu"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Bloqueja el marcatge per veu"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Impedeix l\'ús del marcador Bluetooth quan la pantalla estigui bloquejada"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Dispositius Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Sol·licitud de permís de Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Una aplicació del telèfon sol·licita permís per activar el Bluetooth. Voleu permetre-ho?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Una aplicació del telèfon sol·licita permís per permetre que altres dispositius Bluetooth puguin detectar el telèfon durant <xliff:g id="TIMEOUT">%1$d</xliff:g> segons. Voleu permetre-ho?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Una aplicació del telèfon sol·licita permís perquè altres dispositius amb Bluetooth puguin \"detectar-lo sempre\". Vols acceptar-ho?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Una aplicació del telèfon sol·licita permís per activar el Bluetooth i perquè altres dispositius puguin detectar el telèfon durant <xliff:g id="TIMEOUT">%1$d</xliff:g> segons. Voleu permetre-ho?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Una aplicació del telèfon sol·licita permís per activar el Bluetooth i perquè altres dispositius puguin detectar-lo. Vols permetre-ho?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"S\'està activant Bluetooth..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Configuració de data i hora"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 p. m."</string>
