--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Viditelné"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Zařízení je viditelné v intervalu <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> s."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Viditelné"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Přepne zařízení do viditelného režimu"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Časový limit viditelného režimu"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Nastavit dobu, po kterou bude zařízení ve viditelném režimu"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Uzamknout hlasové vytáčení"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Zabránit použití vytáčení Bluetooth při uzamčené obrazovce"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Zařízení Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Požadavek na povolení zařízení Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Aplikace v telefonu požaduje povolení zapnout připojení Bluetooth. Chcete toto povolení udělit?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Aplikace v telefonu požaduje povolení nastavit telefon do viditelného režimu na <xliff:g id="TIMEOUT">%1$d</xliff:g> s. Chcete toto povolení udělit?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Aplikace v telefonu požaduje povolení trvale nastavit telefon do viditelného režimu pro ostatní zařízení Bluetooth. Chcete toto povolení udělit?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Aplikace v telefonu požaduje povolení zapnout připojení Bluetooth a nastavit telefonu do viditelného režimu na <xliff:g id="TIMEOUT">%1$d</xliff:g> s. Chcete toto povolení udělit?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Aplikace v telefonu požaduje povolení zapnout připojení Bluetooth a nastavit telefon do viditelného režimu pro ostatní zařízení. Chcete toto povolení udělit?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Zapínání zařízení Bluetooth..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Nastavení data a času"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
