--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Sichtbar"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Für <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> Sekunden sichtbar..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Sichtbar"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Gerät sichtbar machen"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Timeout für Sichtbarkeit"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Stellen Sie ein, wie lang das Gerät sichtbar sein soll."</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Sprachwahl sperren"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Verwendung des Bluetooth-Dialers bei gesperrtem Bildschirm verhindern"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth-Geräte"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Bluetooth-Berechtigungsanfrage"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Eine Anwendung auf Ihrem Telefon beantragt eine Berechtigung zum Aktivieren von Bluetooth. Möchten Sie dies tun?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Eine Anwendung auf Ihrem Telefon beantragt die Berechtigung, Ihr Telefon für <xliff:g id="TIMEOUT">%1$d</xliff:g> Sekunden für andere Bluetooth-Geräte sichtbar zu machen. Möchten Sie dies tun?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Eine Anwendung auf Ihrem Telefon beantragt die Berechtigung, Ihr Telefon für immer für andere Bluetooth-Geräte sichtbar zu machen. Möchten Sie dies tun?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Eine Anwendung auf Ihrem Telefon beantragt die Berechtigung, Bluetooth zu aktivieren und Ihr Telefon für <xliff:g id="TIMEOUT">%1$d</xliff:g> Sekunden für andere Telefone sichtbar zu machen. Möchten Sie dies tun?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Eine Anwendung auf Ihrem Telefon beantragt die Berechtigung, Bluetooth zu aktivieren und Ihr Telefon für andere Telefone sichtbar zu machen. Möchten Sie dies tun?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Bluetooth wird aktiviert..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Einstellungen für Datum &amp; Uhrzeit"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00"</string>
