--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Ανιχνεύσιμο"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Ανιχνεύσιμο για <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> δευτερόλεπτα..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Ανιχνεύσιμη"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Να γίνει η συσκευή ανιχνεύσιμη"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Ανιχνεύσιμη λήξη ορίου χρόνου"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Ρυθμίστε τον χρόνο δυνατότητας ανίχνευσης της συσκευής"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Κλείδωμα της λειτουργίας φωνητικών κλήσεων"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Να μην επιτρέπεται η χρήση του προγράμματος κλήσης bluetooth όταν η οθόνη είναι κλειδωμένη"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Συσκευές Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Αίτημα άδειας Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Μια εφαρμογή στο τηλέφωνό σας ζητά δικαίωμα ενεργοποίησης του Bluetooth. Θέλετε να το επιτρέψετε;"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Μια εφαρμογή στο τηλέφωνό σας ζητά άδεια για καταστήσει τη συσκευή σας ορατή από άλλες συσκευές Bluetooth για <xliff:g id="TIMEOUT">%1$d</xliff:g> δευτερόλεπτα. Θέλετε να τη χορηγήσετε;"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Μια εφαρμογή στο τηλέφωνό σας ζητά άδεια για καταστήσει τη συσκευή σας \"μονίμως ορατή\" από άλλες συσκευές Bluetooth. Θέλετε να τη χορηγήσετε;"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Μια εφαρμογή στο τηλέφωνό σας ζητά άδεια να ενεργοποιήσει το Bluetooth και να καταστήσει τη συσκευή σας ορατή από άλλες συσκευές για <xliff:g id="TIMEOUT">%1$d</xliff:g> δευτερόλεπτα. Θέλετε να τη χορηγήσετε;"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Μια εφαρμογή στο τηλέφωνό σας ζητά άδεια να ενεργοποιήσει το Bluetooth και να καταστήσει το τηλέφωνό σας ανιχνεύσιμο από άλλες συσκευές. Θέλετε να τη χορηγήσετε;"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Ενεργοποίηση Bluetooth…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Ρυθμίσεις ημερομηνίας &amp; ώρας"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 μμ"</string>
