--- a/res/values-en-rGB/strings.xml
+++ b/res/values-en-rGB/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Discoverable"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Discoverable for <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> seconds…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Discoverable"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Make device discoverable"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Discoverable timeout"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Set how long device will be discoverable"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Lock voice dialling"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Prevent use of the Bluetooth dialler when the screen is locked"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth devices"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Bluetooth permission request"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"An application on your phone is requesting permission to turn on Bluetooth. Do you want to do this?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"An application on your phone is requesting permission to make your phone discoverable by other Bluetooth devices for <xliff:g id="TIMEOUT">%1$d</xliff:g> seconds. Do you want to do this?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"An application on your phone is requesting permission to make your phone “always discoverable” by other Bluetooth devices. Do you want to do this?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"An application on your phone is requesting permission to turn on Bluetooth and make your phone discoverable by other devices for <xliff:g id="TIMEOUT">%1$d</xliff:g> seconds. Do you want to do this?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"An application on your phone is requesting permission to turn on Bluetooth and to make your phone discoverable by other devices. Do you want to do this?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Turning on Bluetooth…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Date &amp; time settings"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 P.M."</string>
