--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"بلوتوث"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"قابل شناسایی"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"قابل شناسایی برای <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> ثانیه..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"قابل شناسایی"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"دستگاه قابل شناسایی شود"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"پایان زمان قابلیت شناسایی"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"مدت زمان قابل شناسایی بودن دستگاه را تنظیم کنید"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"قفل کردن شماره گیری صوتی"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"ممانعت از استفاده شماره گیر بلوتوث هنگام قفل شدن صفحه"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"دستگاه های بلوتوث"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"درخواست مجوز بلوتوث"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"برنامه ای در گوشی شما درخواست کرده است که بلوتوث روشن شود. می خواهید این کار را انجام دهید؟"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"برنامه ای در گوشی شما درخواست کرده است که گوشی شما برای <xliff:g id="TIMEOUT">%1$d</xliff:g> ثانیه برای دیگر دستگاه های بلوتوث قابل شناسایی باشد. می خواهید این کار را انجام دهید؟"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"یک برنامه کاربردی در تلفن شما درخواست اجازه کرده است که تلفن شما را برای سایر دستگاه های بلوتوث \"همیشه قابل شناسایی\" کند. می خواهید این کار را انجام دهید؟"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"برنامه ای در گوشی شما درخواست مجوز برای روشن کردن بلوتوث کرده و اینکه دستگاه شما برای دیگر دستگاه ها به مدت <xliff:g id="TIMEOUT">%1$d</xliff:g> ثانیه قابل شناسایی باشد. می خواهید این کار را انجام دهید؟"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"یک برنامه کاربردی در تلفن شما درخواست اجازه کرده است که بلوتوث را روشن کرده و تلفن شما را برای سایر دستگاه ها قابل شناسایی کند. می خواهید این کار را انجام دهید؟"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"خاموش کردن بلوتوث..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"تنظیمات تاریخ و ساعت"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 بعدازظهر"</string>
