--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Tunnistettavissa"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Tunnistettavissa <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> sekunnin ajan..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Tunnistettavissa"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Aseta laite tunnistettavaksi"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Aika, jolloin laite tunnistettavissa"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Määritä, kuinka kauan laite on tunnistettavissa"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Lukitse äänipuhelut"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Estä Bluetooth-puhelut kun näyttö on lukittu"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth-laitteet"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Bluetooth-yhteyspyyntö"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Puhelimesi sovellus pyytää lupaa ottaa Bluetooth-yhteyden käyttöön. Haluatko myöntää luvan?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Puhelimesi sovellus pyytää lupaa asettaa puhelimesi muiden Bluetooth-laitteiden tunnistettavaksi <xliff:g id="TIMEOUT">%1$d</xliff:g> sekunnin ajaksi. Haluatko myöntää luvan?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Puhelimesi sovellus pyytää lupaa asettaa puhelimesi muiden Bluetooth-laitteiden tunnistettavaksi. Haluatko myöntää luvan?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Puhelimesi sovellus pyytää lupaa ottaa Bluetooth-yhteyden käyttöön ja asettaa puhelimesi muiden Bluetooth-laitteiden tunnistettavaksi <xliff:g id="TIMEOUT">%1$d</xliff:g> sekunnin ajaksi. Haluatko myöntää luvan?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Puhelimesi sovellus pyytää lupaa ottaa Bluetooth-yhteyden käyttöön ja asettaa puhelimesi muiden Bluetooth-laitteiden tunnistettavaksi. Haluatko myöntää luvan?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Otetaan Bluetooth-yhteys käyttöön…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Päivämäärä- ja aika-asetukset"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1.00 ip"</string>
