--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Identifiable"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Identifiable pendant <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> secondes..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Identifiable"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Permettre l\'identification de l\'appareil"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Délai au-delà duquel l\'appareil n\'est plus identifiable"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Définir la durée pendant laquelle l\'appareil est identifiable"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Bloquer les appels par reconnaissance vocale"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Désactiver les appels via le Bluetooth lorsque l\'écran est verrouillé"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Appareils Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Demande d\'autorisation Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Une application sur votre téléphone demande l\'autorisation d\'activer Bluetooth. Voulez-vous l\'activer ?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Une application sur votre téléphone demande l\'autorisation d\'activer la fonction de détection de votre téléphone par d\'autres appareils Bluetooth pendant <xliff:g id="TIMEOUT">%1$d</xliff:g> secondes. Voulez-vous l\'activer ?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Une application de votre téléphone demande l\'autorisation de rendre ce dernier identifiable en permanence par d\'autres appareils Bluetooth. Voulez-vous activer cette fonction ?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Une application sur votre téléphone demande l\'autorisation d\'activer Bluetooth et de permettre à d\'autres appareils de détecter votre téléphone pendant <xliff:g id="TIMEOUT">%1$d</xliff:g> secondes. Voulez-vous l\'activer ?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Une application de votre téléphone demande l\'autorisation d\'activer Bluetooth et de permettre à d\'autres appareils d\'identifier votre téléphone. Voulez-vous activer cette fonction ?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Activation du Bluetooth…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Paramètres d\'heure et de date"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 pm"</string>
