--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Felderíthető"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> másodpercig felderíthető..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Felderíthető"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Az eszköz legyen felderíthető"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Felfedezhetőségi időtartam"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Állítsa be, milyen hosszan legyen felfedezhető az eszköz"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Hanghívás zárolása"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"A bluetooth tárcsázó használatának megakadályozása, ha a képernyő le van zárva"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth eszközök"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Bluetooth engedélykérés"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Az egyik alkalmazás engedélyt kér a Bluetooth bekapcsolására. Engedélyezi?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Az egyik alkalmazás engedélyt kér arra, hogy <xliff:g id="TIMEOUT">%1$d</xliff:g> másodpercre felderíthetővé tegye telefonját más Bluetooth eszközök számára. Engedélyezi ezt?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Egy alkalmazás engedélyt kér arra, hogy telefonját \"mindig felfedezhetővé\" tegye más Bluetooth-eszközök számára. Engedélyezi ezt?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Az egyik alkalmazás engedélyt kér arra, hogy <xliff:g id="TIMEOUT">%1$d</xliff:g> másodpercre felderíthetővé tegye telefonját más eszközök számára. Engedélyezi ezt?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Egy alkalmazás engedélyt kér arra, hogy bekapcsolja a Bluetooth-t, és telefonját felfedezhetővé tegye más eszközök számára. Engedélyezi ezt?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"A Bluetooth bekapcsolása..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Dátum és idő beállításai"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"du. 1:00"</string>
