--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Dapat ditemukan"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Dapat ditemukan selama <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> detik……"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Dapat ditemukan"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Buat perangkat dapat ditemukan"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Waktu dapat ditemukan habis"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Setel berapa lama perangkat dapat ditemukan"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Kunci pemanggilan suara"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Mencegah penggunaan aplikasi telepon Bluetooth ketika layar terkunci"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Perangkat bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Permintaan izin bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Aplikasi pada ponsel Anda meminta izin untuk menghidupkan Bluetooth. Apakah Anda ingin melakukannya?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Aplikasi pada ponsel Anda meminta izin untuk membuat ponsel Anda dapat ditemukan oleh perangkat Bluetooth lain selama <xliff:g id="TIMEOUT">%1$d</xliff:g> detik. Apakah Anda ingin melakukannya?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Aplikasi pada ponsel Anda meminta izin untuk membuat ponsel \"selalu dapat ditemukan\" oleh perangkat Bluetooth lain. Anda ingin melakukannya?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Aplikasi pada ponsel Anda meminta izin untuk mengaktifkan Bluetooth dan untuk membuat ponsel Anda dapat ditemukan oleh perangkat lain selama <xliff:g id="TIMEOUT">%1$d</xliff:g> detik. Apakah Anda ingin melakukannya?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Aplikasi pada ponsel Anda meminta izin untuk mengaktifkan Bluetooth dan membuat ponsel dapat ditemukan oleh perangkat lain. Anda ingin melakukannya?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Menghidupkan Bluetooth..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Setelan tanggal &amp; waktu"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1.00 pm"</string>
