--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Rilevabile"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Rilevabile per <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> secondi..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Rilevabile"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Rendi rilevabile il dispositivo"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Timeout rilevabilità"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Imposta la durata della rilevabilità del dispositivo"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Blocca composizione vocale"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Impedisci l\'uso del compositore Bluetooth quando lo schermo è bloccato"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Dispositivi Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Richiesta autorizzazione Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Un\'applicazione sul tuo telefono chiede l\'autorizzazione per attivare Bluetooth. Procedere?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Un\'applicazione sul tuo telefono chiede l\'autorizzazione per rendere il tuo telefono rilevabile da altri dispositivi Bluetooth per <xliff:g id="TIMEOUT">%1$d</xliff:g> secondi. Procedere?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Un\'applicazione sul tuo telefono chiede l\'autorizzazione per rendere il tuo telefono \"sempre rilevabile\" da altri dispositivi Bluetooth. Procedere?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Un\'applicazione sul tuo telefono chiede l\'autorizzazione per attivare Bluetooth e rendere il tuo telefono rilevabile da altri dispositivi per <xliff:g id="TIMEOUT">%1$d</xliff:g> secondi. Procedere?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Un\'applicazione sul tuo telefono chiede l\'autorizzazione per attivare Bluetooth e rendere il tuo telefono rilevabile da altri dispositivi. Procedere?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Attivazione Bluetooth in corso…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Impostazioni data e ora"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
