--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"בר-גילוי"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"גלוי למשך <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> שניות…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"גלוי"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"הפוך את ההתקן לבר-גילוי"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"זמן קצוב לתפוגה של מצב גלוי"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"הגדר במשך כמה זמן ההתקן יהיה גלוי"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"נעל חיוג קולי"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"מנע את השימוש בחייגן Bluetooth כאשר הצג נעול"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"התקני Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"בקשת הרשאה של Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"יישום בטלפון מבקש הרשאה להפעיל Bluetooth. האם ברצונך להפעיל?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"יישום בטלפון מבקש הרשאה להפוך את הטלפון לגלוי להתקני Bluetooth אחרים למשך <xliff:g id="TIMEOUT">%1$d</xliff:g> שניות. האם ברצונך לעשות זאת?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"יישום בטלפון מבקש הרשאה להפוך את הטלפון ל\"גלוי תמיד\" להתקני Bluetooth אחרים. האם ברצונך לעשות זאת?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"יישום בטלפון מבקש הרשאה להפעיל Bluetooth ולהפוך את הטלפון לגלוי להתקנים אחרים למשך <xliff:g id="TIMEOUT">%1$d</xliff:g> שניות. האם ברצונך לבצע פעולות אלה?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"יישום בטלפון מבקש הרשאה להפעיל Bluetooth ולהפוך את הטלפון לגלוי להתקנים אחרים. האם ברצונך לבצע זאת?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"מפעיל Bluetooth…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"הגדרות תאריך ושעה"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
