--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"検出可能"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g>秒間検出可能..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"検出可能"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"この端末の検出を許可する"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"検出可能時間のタイムアウト"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"端末の検出可能時間を設定する"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"ボイスダイヤルをロック"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"画面がロックされているときはBluetoothボイスダイヤルを使用しない"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth端末"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Bluetooth許可リクエスト"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"アプリケーションがBluetoothをONにする許可をリクエストしています。許可しますか？"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"アプリケーションが、この端末を<xliff:g id="TIMEOUT">%1$d</xliff:g>秒間他のBluetooth端末から検出できるようにする許可をリクエストしています。許可しますか？"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"アプリケーションが、この端末を他のBluetoothデバイスから「常に検出できるようにする」許可をリクエストしています。許可しますか？"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"アプリケーションが、BluetoothをONにしてこの端末を<xliff:g id="TIMEOUT">%1$d</xliff:g>秒間他の端末から検出できるようにする許可をリクエストしています。許可しますか？"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"アプリケーションが、BluetoothをONにしてこの端末を他のデバイスから検出できるようにする許可をリクエストしています。許可しますか？"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"BluetoothをONにしています..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"日付と時刻"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 PM"</string>
