--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Atklājams"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Atklājams <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> sekundes…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Atklājams"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Padarīt ierīci atklājamu"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Taimauts procesam, kad ierīce ir atklājama"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Iestatiet laiku, cik ilgi ierīce būs atklājama."</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Bloķēt balss iezvani"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Neļaut izmantot Bluetooth iezvanprogrammu, kad ekrāns ir bloķēts"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth ierīces"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Bluetooth atļaujas pieprasījums"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Jūsu tālruņa lietojumprogramma pieprasa atļauju ieslēgt Bluetooth. Vai vēlaties to darīt?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Jūsu tālruņa lietojumprogramma pieprasa atļauju padarīt jūsu tālruni atklājamu citām Bluetooth ierīcēm <xliff:g id="TIMEOUT">%1$d</xliff:g> sekundes. Vai vēlaties to darīt?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Lietojumprogramma jūsu tālrunī pieprasa atļauju iestatīt jūsu tālruni kā vienmēr atklājamu citām Bluetooth ierīcēm. Vai vēlaties to darīt?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Jūsu tālruņa lietojumprogramma pieprasa atļauju ieslēgt Bluetooth un padarīt jūsu tālruni atklājamu citām ierīcēm <xliff:g id="TIMEOUT">%1$d</xliff:g> sekundes. Vai vēlaties to darīt?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Lietojumprogramma jūsu tālrunī pieprasa atļauju ieslēgt Bluetooth un iestatīt jūsu tālruni kā atklājamu citām ierīcēm. Vai vēlaties to darīt?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Notiek Bluetooth ieslēgšana…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Datuma un laika iestatījumi"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13.00"</string>
