--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Detectável"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Detectável durante <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> segundos…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Detectável"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Tornar o dispositivo detectável"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Tempo limite em que é detectável"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Definir durante quanto tempo ficará o dispositivo detectável"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Bloquear marcação por voz"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Evitar a utilização do telefone Bluetooth quando o ecrã está bloqueado"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Dispositivos Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Pedido de emparelhamento de Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Uma aplicação no seu telefone está a solicitar autorização para activar o Bluetooth. Pretende fazê-lo?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Uma aplicação do seu telefone está a solicitar autorização para que o seu telefone possa ser detectado por outros dispositivos Bluetooth durante <xliff:g id="TIMEOUT">%1$d</xliff:g> segundos. Pretende fazê-lo?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Uma aplicação do telefone está a solicitar autorização para que o seu telefone possa ser \"sempre detectável\" por outros dispositivos Bluetooth. Pretende fazê-lo?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Uma aplicação do seu telefone está a solicitar autorização para activar o Bluetooth e para que o seu telefone possa ser detectado por outros dispositivos durante <xliff:g id="TIMEOUT">%1$d</xliff:g> segundos. Pretende fazê-lo?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Uma aplicação do telefone está a solicitar autorização para activar o Bluetooth e para que o seu telefone seja detectável por outros dispositivos. Pretende fazê-lo?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"A ligar Bluetooth..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Definições de data e hora"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 pm"</string>
