--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Detectável"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Detectável por <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> segundos…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Detectável"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Tornar o dispositivo detectável"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Detectável por tempo limite"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Definir por quanto tempo o aparelho ficará detectável"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Bloquear discagem por voz"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Impedir o uso do discador Bluetooth quando a tela estiver bloqueada."</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Dispositivos Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Solicitação de permissão para Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Um aplicativo no seu telefone está solicitando permissão para ativar o Bluetooth. Deseja fazer isso?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Um aplicativo no seu telefone está solicitando permissão para tornar o seu telefone detectável por outros dispositivos Bluetooth por <xliff:g id="TIMEOUT">%1$d</xliff:g> segundos. Deseja fazer isso?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Um aplicativo no seu telefone está solicitando permissão para tornar o seu telefone sempre detectável por outros dispositivos Bluetooth. Deseja fazer isso?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Um aplicativo no seu telefone está solicitando permissão para ativar o Bluetooth e tornar o seu telefone detectável por outros dispositivos por <xliff:g id="TIMEOUT">%1$d</xliff:g> segundos. Deseja fazer isso?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Um aplicativo em seu telefone está solicitando permissão para ativar o Bluetooth e tornar o seu telefone detectável por outros dispositivos. Deseja fazer isso?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Ativando Bluetooth…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Configurações de data e hora"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 pm"</string>
