--- a/res/values-rm/strings.xml
+++ b/res/values-rm/strings.xml
@@ -90,7 +90,13 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Visibel"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Visibel durant <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> secundas…"</string>
+    <!-- no translation found for bluetooth_is_discoverable_always (8573385118329733931) -->
+    <skip />
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Far daventar visibel l\'apparat"</string>
+    <!-- no translation found for bluetooth_visibility_timeout (6634508002347847278) -->
+    <skip />
+    <!-- no translation found for bluetooth_visibility_timeout_summary (6483353842671501585) -->
+    <skip />
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Bloccar la cumposiziun vocala"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Impedir l\'utilisaziun dal dialer bluetooth sch\'il visur è bloccà"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Apparats Bluetooth"</string>
@@ -115,7 +121,11 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Dumonda d\'autorisaziun Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Ina applicaziun sin Voss telefon dumonda l\'autorisaziun dad activar bluetooth. Permetter?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Ina applicaziun sin Voss telefonin dumonda l\'autorisaziun dad activar la visibilitad da Voss telefonin per auters apparats da bluetooth durant <xliff:g id="TIMEOUT">%1$d</xliff:g> secundas. Vulais Vus quai?"</string>
+    <!-- no translation found for bluetooth_ask_lasting_discovery (3413855805411554871) -->
+    <skip />
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Ina applicaziun sin Voss telefonin dumonda l\'autorisaziun dad activar bluetooth e far visibel Voss telefonin per auters apparats durant <xliff:g id="TIMEOUT">%1$d</xliff:g> secundas. Vulais Vus quai?"</string>
+    <!-- no translation found for bluetooth_ask_enablement_and_lasting_discovery (7471195931669103553) -->
+    <skip />
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Bluetooth vegn activà…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Parameters da data e da temp"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00:00"</string>
