--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Detectabil"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Detectabil pentru <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> (de) secunde…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Detectabil"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Setaţi dispozitivul ca detectabil"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Timp limită pentru detectare"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Setaţi cât timp va fi detectabil dispozitivul"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Blocaţi apelarea vocală"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Împiedicaţi apelarea prin Bluetooth când este blocat ecranul"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Dispozitive Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Solicitare de permisiune Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"O aplicaţie de pe telefonul dvs. solicită permisiunea de a activa Bluetooth. Doriţi să faceţi acest lucru?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"O aplicaţie de pe telefonul dvs. solicită permisiunea de a seta telefonul dvs. ca detectabil de către alte dispozitive Bluetooth pentru <xliff:g id="TIMEOUT">%1$d</xliff:g> (de) secunde. Doriţi să faceţi acest lucru?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"O aplicaţie de pe telefonul dvs. solicită permisiunea ca acesta să poată fi „detectabil întotdeauna” de alte dispozitive Bluetooth. Acordaţi permisiunea?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"O aplicaţie de pe telefonul dvs. solicită permisiunea de a activa Bluetooth şi să seteze telefonul dvs. ca detectabil de către alte dispozitive timp de <xliff:g id="TIMEOUT">%1$d</xliff:g> (de) secunde. Doriţi să faceţi acest lucru?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"O aplicaţie de pe telefonul dvs. solicită permisiunea de a activa Bluetooth şi de a seta telefonul pentru a fi detectabil de alte dispozitive. Acordaţi permisiunea?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Se activează Bluetooth..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Setări privind data şi ora"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
