--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Viditeľné"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Zariadenie je viditeľné v intervale <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> s"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Viditeľné"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Prepne zariadenie do viditeľného režimu"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Časový limit viditeľného režimu vypršal"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Nastavte dobu, počas ktorej bude zariadenie vo viditeľnom režime"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Uzamknúť hlasové vytáčanie"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Zabrániť použitiu vytáčania Bluetooth pri uzamknutej obrazovke"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Zariadenia Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Žiadosť o povolenie zariadenia Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Aplikácia v telefóne vyžaduje povolenie na zapnutie pripojenia Bluetooth. Chcete udeliť toto povolenie?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Aplikácia v telefóne požaduje povolenie na nastavenie telefónu do viditeľného režimu pre ostatné zariadenia Bluetooth na <xliff:g id="TIMEOUT">%1$d</xliff:g> s. Chcete udeliť toto povolenie?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Aplikácia v telefóne vyžaduje povolenie na trvalé nastavenie telefónu do viditeľného režimu pre ostatné zariadenia Bluetooth. Chcete udeliť toto povolenie?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Aplikácia v telefóne požaduje povolenie na zapnutie pripojenia Bluetooth a nastavenie telefónu do viditeľného režimu na <xliff:g id="TIMEOUT">%1$d</xliff:g> s. Chcete udeliť toto povolenie?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Aplikácia v telefóne požaduje povolenie na zapnutie pripojenia Bluetooth a nastavenie telefónu do viditeľného režimu. Chcete udeliť toto povolenie?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Prebieha zapínanie rozhrania Bluetooth..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Nastavenia dátumu a času"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
