--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Viden"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Viden <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> sekund …"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Viden"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Naj bo naprava vidna drugim"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Omejitev trajanja vidnosti"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Nastavite trajanje vidnosti naprave"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Zakleni glasovno klicanje"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Prepreči uporabo telefona Bluetooth, kadar je zaslon zaklenjen"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Naprave Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Zahteva za dovoljenje za uporabo funkcije Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Eden od programov v telefonu zahteva dovoljenje, da vklopi Bluetooth. Ali želite to storiti?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Eden od programov v telefonu zahteva dovoljenje, da za <xliff:g id="TIMEOUT">%1$d</xliff:g> sekund omogoči vidnost telefona drugim napravam. Ali želite to storiti?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Eden od programov v telefonu zahteva dovoljenje, da bodo lahko druge naprave Bluetooth »vedno odkrile« telefon. Ali se strinjate s tem?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Eden od programov v telefonu zahteva dovoljenje, da vklopi Bluetooth in za <xliff:g id="TIMEOUT">%1$d</xliff:g> sekund omogoči vidnost telefona drugim napravam. Ali želite to storiti?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Eden od programov v telefonu zahteva dovoljenje, da vklopi Bluetooth in omogoči vidnost telefona drugim napravam. Ali se strinjate s tem?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Vklop Bluetootha …"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Datum in nastavitve"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13.00"</string>
