--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"บลูทูธ"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"ค้นพบได้"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"ค้นพบได้เป็นเวลา <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> วินาที…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"ค้นพบได้"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"ทำให้ค้นพบอุปกรณ์ได้"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"ระยะหมดเวลาที่จะค้นพบได้"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"ตั้งค่าระยะเวลาที่ให้สามารถค้นพบอุปกรณ์ได้"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"ล็อกการโทรด้วยเสียง"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"ป้องกันการใช้โปรแกรมโทรออกผ่านบลูทูธเมื่อล็อกหน้าจอไว้"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"อุปกรณ์บลูทูธ"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"คำขออนุญาตใช้บลูทูธ"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"แอปพลิเคชันบนโทรศัพท์คุณกำลังขออนุญาตเปิดบลูทูธ คุณต้องการทำตามนี้หรือไม่"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"แอปพลิเคชันบนโทรศัพท์ของคุณกำลังขออนุญาตเพื่อให้อุปกรณ์บลูทูธอื่นค้นพบโทรศัพท์ของคุณได้เป็นเวลา <xliff:g id="TIMEOUT">%1$d</xliff:g>  วินาที คุณต้องการทำตามนี้หรือไม่"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"แอปพลิเคชันบนโทรศัพท์ของคุณกำลังขออนุญาตทำให้อุปกรณ์บลูทูธอื่นค้นพบโทรศัพท์ของคุณในแบบ \"ค้นพบได้เสมอ\" คุณต้องการดำเนินการนี้หรือไม่"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"แอปพลิเคชันบนโทรศัพท์ของคุณกำลังขออนุญาตเพื่อเปิดบลูทูธและให้อุปกรณ์อื่นค้นพบโทรศัพท์ของคุณได้เป็นเวลา <xliff:g id="TIMEOUT">%1$d</xliff:g> วินาที คุณต้องการทำตามนี้หรือไม่"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"แอปพลิเคชันบนโทรศัพท์ของคุณกำลังขออนุญาตเปิดใช้บลูทูธและทำให้อุปกรณ์อื่นค้นพบโทรศัพท์ของคุณได้ คุณต้องการดำเนินการนี้หรือไม่"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"กำลังเปิดบลูทูธ…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"การตั้งเวลาและวันที่"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 pm"</string>
