--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Natutuklas"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Katuklas-tuklas para sa <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> (na) segundo…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Natutuklasan"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Gawing natutuklas ang device"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Timeout ng natutuklasan"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Itakda kung gaano katagal magiging natutuklasan ang aparato"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"I-lock ang pag-dial gamit ang boses"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Iwasan ang paggamit ng taga-dial ng bluetooth kapag naka-lock ang screen"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Mga device ng bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Kahilingan sa pahintulot ng bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Ang application sa iyong telepono ay humihiling ng pahintulot upang i-on ang Bluetooth. Gusto mong gawin ito?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Humihiling ang isang application sa iyong telepono ng pahintulot na gawing natutuklas ang iyong telepono ng ibang mga Bluetooth device sa loob ng <xliff:g id="TIMEOUT">%1$d</xliff:g> (na) segundo. Gusto mo ba itong gawin?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Humihiling ng pahintulot ang isang application sa iyong telepono upang gawing “always discoverable” ang iyong telepono ng ibang mga Bluetooth device. Gusto mo ba itong gawin?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Ang application na ito sa iyong telepono ay humihiling ng pahintulot upang i-on ang Bluetooth at upang magawang katuklas-tuklas ang iyong telepono ng ibang mga device para sa <xliff:g id="TIMEOUT">%1$d</xliff:g> (na) serbisyo. Gusto mong gawin ito?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Humihiling ng pahintulot ang isang application sa iyong telepono na i-on ang Bluetooth at upang gawing natutuklasan ang iyong telepono ng mga ibang device. Gusto mo ba itong gawin?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Ino-on ang Bluetooth…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Mga setting ng petsa &amp; oras"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 pm"</string>
