--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Видимий"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Видимий протягом <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> сек..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Видимий"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Зробити пристрій видимим"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Час видимості пристрою вийшов"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Налаштуйте час видимості пристрою"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Заблок. голос. набір"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Запобігає використанню набору bluetooth, коли екран заблоковано"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Пристрої Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Запит на дозвіл Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Програма у вашому телефоні просить дозволу на ввімкнення Bluetooth. Зробити це?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Програма у вашому телефоні просить дозволу на надання телефону видимості іншими пристроями Bluetooth протягом <xliff:g id="TIMEOUT">%1$d</xliff:g> сек. Зробити це?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Програма у вашому телефоні просить дозволу на надання телефону \"постійної видимості\" іншими пристроями з Bluetooth. Зробити це?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Програма у вашому телефоні просить дозволу на ввімкнення Bluetooth та надання телефону видимості іншими пристроями протягом <xliff:g id="TIMEOUT">%1$d</xliff:g> сек. Зробити це?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Програма у вашому телефоні просить дозволу на ввімкнення Bluetooth і надання телефону видимості іншими пристроями. Зробити це?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Увімкнення Bluetooth…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Налаштування дати та часу"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
