--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"藍牙"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"可偵測性"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"可供偵測 <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> 秒..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"可供偵測"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"設定裝置為可偵測"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"可供偵測逾時時間"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"設定裝置可供偵測的開放時間"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"鎖定語音撥號"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"螢幕鎖定時不要使用藍芽撥號"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"藍牙裝置"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"藍牙權限要求"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"手機上的某個應用程式要求開啟藍牙裝置，您想要允許要求嗎？"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"手機上的某個應用程式要求開啟藍牙裝置，這表示您的藍牙連線將開放 <xliff:g id="TIMEOUT">%1$d</xliff:g> 秒，讓其他裝置可在時間內搜尋到您的手機。您想要允許要求嗎？"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"手機上的某個應用程式要求將手機設成「永遠」開放其他藍牙裝置搜尋。您想要允許這項要求嗎？"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"手機上的某個應用程式要求開啟藍牙裝置，這表示您的藍牙連線將開放 <xliff:g id="TIMEOUT">%1$d</xliff:g> 秒，讓其他裝置可在時間內搜尋到您的手機。您想要允許要求嗎？"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"手機上的某個應用程式要求開啟藍牙功能，讓其他藍牙裝置可以搜尋到您的手機。您想要允許這項要求嗎？"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"正在開啟藍牙..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"日期與時間設定"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"下午 1:00"</string>
