--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Søgbar"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Søgbar i <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> sekunder ..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Søgbar"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Gør enheden søgbar"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Søgbar timeout"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Indstil i hvor lang tid enheden vil være søgbar"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Lås stemmeopkald"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Bloker brug af Bluetooth-opkald, når skærmen er låst"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth-enheder"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Anmodning om Bluetooth-tilladelse"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Et program på din telefon anmoder om at aktivere Bluetooth. Ønsker du at gøre dette?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Et program på din telefon kræver tilladelse til, at din telefon er synlig for andre Bluetooth-enheder i <xliff:g id="TIMEOUT">%1$d</xliff:g> sekunder. Ønsker du at gøre dette?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"En applikation på din telefon kræver tilladelse til, at din telefon \"altid er søgbar\" for andre Bluetooth-enheder. Vil du gøre dette?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Et program på din telefon anmoder om tilladelse til at aktivere Bluetooth, så din telefon er synlig for andre enheder i <xliff:g id="TIMEOUT">%1$d</xliff:g> sekunder. Ønsker du at gøre dette?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"En applikation på din telefon anmoder om tilladelse til at aktivere Bluetooth, så din telefon er søgbar for andre enheder. Vil du gøre dette?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Aktiverer Bluetooth …"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Indstillinger for dato og tid"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 pm"</string>
