--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Ajustes de Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Visible"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Visible durante <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> segundos..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Visible"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Hacer visible el dispositivo"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Tiempo de espera de visibilidad del dispositivo"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Definir cuánto tiempo estará visible el dispositivo"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Bloquear marcación por voz"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Evitar el uso del marcador a través de Bluetooth cuando la pantalla esté bloqueada"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Dispositivos Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Solicitud de permiso de Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Una aplicación del teléfono está solicitando permiso para activar la función Bluetooth. ¿Quieres realizar esta acción?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Una aplicación del teléfono está solicitando permiso para hacer visible el teléfono para otros dispositivos Bluetooth durante <xliff:g id="TIMEOUT">%1$d</xliff:g> segundos. ¿Quieres realizar esta acción?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Una aplicación del teléfono está solicitando permiso para hacer que el teléfono esté siempre visible para otros dispositivos Bluetooth. ¿Aceptas?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Una aplicación del teléfono está solicitando permiso para activar la función Bluetooth y hacer visible el teléfono para otros dispositivos durante <xliff:g id="TIMEOUT">%1$d</xliff:g> segundos. ¿Quieres realizar esta acción?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Una aplicación del teléfono está solicitando permiso para activar la función Bluetooth y hacer visible el teléfono para otros dispositivos. ¿Aceptas?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Activando Bluetooth..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Ajustes de fecha y hora"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 p.m."</string>
