--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Moguće prepoznavanje"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Moguće prepoznavanje za <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> s…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Moguće prepoznavanje"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Omogući prepoznavanje uređaja"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Privremeni prekid mogućeg prepoznavanja"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Odredite koliko će dugo biti moguće otkriti uređaj"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Zaključaj biranje glasom"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Spriječite upotrebu Bluetooth birača ako je zaslon zaključan"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth uređaji"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Zatraženo je Bluetooth dopuštenje"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Aplikacija na vašem telefonu traži dopuštenje za uključivanje značajke Bluetooth. Želite li to dopustiti?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Aplikacija na vašem telefonu traži dopuštenje da vaš telefon učini vidljivim drugim Bluetooth uređajima na <xliff:g id="TIMEOUT">%1$d</xliff:g> s. Želite li to dopustiti?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Aplikacija na vašem telefonu traži dopuštenje da uvijek omogući prepoznavanje vašeg telefona drugim Bluetooth uređajima. Želite li to dopustiti?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Aplikacija na vašem telefonu traži dopuštenje za uključivanje značajke Bluetooth i da vaš telefon učini vidljivim drugim Bluetooth uređajima na <xliff:g id="TIMEOUT">%1$d</xliff:g> s. Želite li to dopustiti?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Aplikacija na vašem telefonu traži dopuštenje da uključi Bluetooth i vaš telefon učini vidljivim drugim Bluetooth uređajima. Želite li to dopustiti?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Uključivanje Bluetootha…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Postavke datuma i vremena"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13 h"</string>
