--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"검색 가능"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g>초 동안 검색 가능..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"검색 가능"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"장치를 검색 가능하게 설정"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"검색 가능 시간제한"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"검색 가능 기간 설정"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"잠금 시 음성 다이얼링"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"화면 잠금 시 블루투스 다이얼러 사용 방지"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth 장치"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"블루투스 권한 요청"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"휴대전화의 애플리케이션에서 블루투스 사용 권한을 요청하고 있습니다. 사용하시겠습니까?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"휴대전화의 애플리케이션에서 <xliff:g id="TIMEOUT">%1$d</xliff:g>초 동안 다른 블루투스 장치에서 사용자의 휴대전화를 찾을 수 있는 권한을 요청하고 있습니다. 사용하시겠습니까?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"휴대전화의 애플리케이션이 다른 블루투스 기기에서 사용자의 휴대전화를 \'항상 검색\'할 수 있도록 하는 권한을 요청하고 있습니다. 사용하시겠습니까?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"휴대전화의 애플리케이션에서 블루투스 사용 및 <xliff:g id="TIMEOUT">%1$d</xliff:g>초 동안 다른 장치에서 사용자의 휴대전화를 찾을 수 있는 권한을 요청하고 있습니다. 사용하시겠습니까?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"휴대전화의 애플리케이션이 블루투스를 사용할 권한 및 다른 기기에서 사용자의 휴대전화를 검색할 수 있도록 하는 권한을 요청하고 있습니다. 사용하시겠습니까?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"블루투스 켜는 중..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"날짜 및 시간 설정"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 PM"</string>
