--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Randamas"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Randamas <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> sek..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Randamas"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Padaryti įrenginį atrandamą"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Aptinkamumo skirtasis laikas"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Nustatyti, kiek laiko įrenginys bus aptinkamas"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Užrakinti numerio rinkimą balsu"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Neleisti naudoti „Bluetooth“ numerio rinkiklio, kai ekranas užrakintas"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"„Bluetooth“ įrenginiai"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"„Bluetooth“ leidimo užklausa"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Telefone esanti programa prašo leidimo įjungti „Bluetooth“. Ar norite tai atlikti?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Jūsų telefone esanti programa prašo leidimo padaryti telefoną randamu kitiems „Bluetooth“·įrenginiams <xliff:g id="TIMEOUT">%1$d</xliff:g> sek. Ar norite tai daryti?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Telefono programa prašo leidimo telefoną padaryti „visada aptinkamą“ kitų „Bluetooth“ įrenginių. Ar norite tai atlikti?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Telefone esanti programa prašo leidimo įjungti „Bluetooth“ ir padaryti telefoną randamą kitų įrenginių·<xliff:g id="TIMEOUT">%1$d</xliff:g> sek. Ar norite tai atlikti?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Telefone esanti programa prašo leidimo įjungti „Bluetooth“ ir padaryti telefoną aptinkamą kitų įrenginių. Ar norite tai atlikti?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Įjungiamas „Bluetooth“..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Datos ir laiko nustatymai"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
