--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Kan worden gevonden"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Kan gedurende <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> seconden worden gevonden…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Vindbaar"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Zorgen dat het apparaat kan worden gevonden"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Time-out voor vindbaarheid"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Instellen hoe lang het apparaat vindbaar is"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Spraakkeuze vergrendelen"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Gebruik van de Bluetooth-dialer voorkomen wanneer het scherm is vergrendeld"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth-apparaten"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Machtigingsverzoek voor Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Een app probeert Bluetooth in te schakelen. Wilt u dit toestaan?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Een app probeert uw telefoon <xliff:g id="TIMEOUT">%1$d</xliff:g> seconden zichtbaar te maken voor andere Bluetooth-apparaten. Wilt u dit toestaan?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Een app op uw telefoon vraagt toestemming uw tablet altijd vindbaar te maken voor andere Bluetooth-apparaten. Wilt u dit toestaan?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Een app probeert Bluetooth in te schakelen en uw telefoon <xliff:g id="TIMEOUT">%1$d</xliff:g> seconden zichtbaar te maken voor andere apparaten. Wilt u dit toestaan?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Een app op uw telefoon vraagt toestemming Bluetooth in te schakelen en uw telefoon vindbaar te maken voor andere apparaten. Wilt u dit toestaan?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Bluetooth inschakelen…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Datum- en tijdinstellingen"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00 uur"</string>
