--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Wykrywalny"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Wykrywalny przez <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> s …"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Wykrywalny"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Zezwalaj na wykrywanie urządzenia"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Czas wykrywalności"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Ustaw czas, przez jaki urządzenie będzie wykrywalne"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Zablokuj wybieranie głosowe"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Zapobiegaj używaniu wybierania Bluetooth, gdy ekran jest zablokowany"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Lista urządzeń"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Prośba o pozwolenie na włączenie modułu Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Aplikacja w telefonie prosi o pozwolenie na włączenie modułu Bluetooth. Czy chcesz na to zezwolić?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Aplikacja w telefonie prosi o pozwolenie na ustawienie telefonu jako wykrywalnego przez inne urządzenia Bluetooth na czas <xliff:g id="TIMEOUT">%1$d</xliff:g> s. Czy chcesz na to zezwolić?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Aplikacja w telefonie prosi o pozwolenie na ustawienie telefonu jako zawsze wykrywalnego przez inne urządzenia Bluetooth. Czy chcesz na to zezwolić?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Aplikacja w telefonie prosi o pozwolenie na włączenie modułu Bluetooth i ustawienie telefonu jako wykrywalnego przez inne urządzenia na czas <xliff:g id="TIMEOUT">%1$d</xliff:g> s. Czy chcesz na to zezwolić?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Aplikacja w telefonie prosi o pozwolenie na włączenie modułu Bluetooth i ustawienie telefonu jako wykrywalnego przez inne urządzenia. Czy chcesz na to zezwolić?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Trwa włączanie modułu Bluetooth..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Ustawienia daty i godziny"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 (po południu)"</string>
