--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Видљив"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Видљив на <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> секунде(и)…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Видљив"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Нека уређај буде видљив"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Време до прекида видљивости"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Подешавање периода у коме ће уређај бити видљив"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Закључај говорно бирање"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Спречи коришћење bluetooth програма за бирање бројева када је екран закључан"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth уређаји"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Захтев за Bluetooth дозволу"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Апликација на телефону захтева дозволу да укључи Bluetooth. Желите ли ово да урадите?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Апликација на телефону захтева дозволу да учини ваш телефон видљивим за друге Bluetooth уређаје на <xliff:g id="TIMEOUT">%1$d</xliff:g> секунде(и). Желите ли ово да урадите?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Апликација на телефону захтева дозволу да телефон учини „увек видљивим“ за друге Bluetooth уређаје. Желите ли да то урадите?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Апликација на телефону захтева дозволу да укључи Bluetooth и да учини ваш телефон видљивим за друге уређаје на <xliff:g id="TIMEOUT">%1$d</xliff:g> секунде(и). Желите ли ово да урадите?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Апликација на телефону захтева дозволу да укључи Bluetooth и телефон учини видљивим за друге уређаје. Желите ли да то урадите?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Укључивање Bluetooth-а…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Подешавања датума и времена"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
