--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Synlighet"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Synlig i <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> sekunder..."</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Synlig"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Gör enheten synlig"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Tidsgräns för synlighet"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Ange hur länge enheten ska vara synlig"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Röstuppringning med låsskärm"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Förhindra att bluetooth-uppringningsfunktionen används när skärmen är låst"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth-enheter"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Begäran om Bluetooth-behörighet"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"En app i telefonen begär tillåtelse att aktivera Bluetooth. Vill du tillåta det?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"En app i telefonen begär tillåtelse att göra telefonen synlig för andra Bluetooth-enheter i <xliff:g id="TIMEOUT">%1$d</xliff:g> sekunder. Vill du tillåta det?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"En app begär tillåtelse att göra telefonen ständigt synlig för andra Bluetooth-enheter. Vill du tillåta det?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"En app i telefonen begär tillåtelse att aktivera Bluetooth och göra telefonen synlig för andra enheter i <xliff:g id="TIMEOUT">%1$d</xliff:g> sekunder. Vill du tillåta det?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"En app begär tillåtelse att aktivera Bluetooth och göra telefonen synlig för andra enheter. Vill du tillåta det?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Aktiverar Bluetooth …"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Inställningar för datum och tid"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"Kl. 13:00"</string>
