--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Keşfedilebilir"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> saniye için keşfedilebilir…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Keşfedilebilir"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Cihazı keşfedilebilir yap"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Keşfedilebilirlik için zaman aşımı"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Cihazın ne süreyle keşfedilebilir olacağını ayarla"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Sesli aramayı kilitle"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Ekran kilitliyken blutooth çeviricinin kullanımını engelle"</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Bluetooth cihazlar"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Bluetooth izin isteği"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Telefonunuzdaki bir uygulama, Bluetooth\'u açmak için izin istiyor. Bunu yapmak istiyor musunuz?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Telefonunuzdaki bir uygulama telefonunuzu <xliff:g id="TIMEOUT">%1$d</xliff:g> saniye boyunca diğer Bluetooth cihazları tarafından bulunabilir duruma getirmek için izin istiyor. Bunu yapmak istiyor musunuz?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Telefonunuzdaki bir uygulama, telefonunuzu diğer Bluetooth cihazları tarafından \"her zaman keşfedilebilir\" yapmak için izin istiyor. Bunu yapmak istiyor musunuz?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Telefonunuzdaki bir uygulama, <xliff:g id="TIMEOUT">%1$d</xliff:g> saniye boyunca Bluetooth\'u açmak ve telefonunuzu diğer cihazlar tarafından bulunabilir duruma getirmek için izin istiyor. Bunu yapmak istiyor musunuz?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Telefonunuzdaki bir uygulama, Bluetooth\'u açmak ve telefonunuzu diğer cihazlar tarafından keşfedilebilir duruma getirmek için izin istiyor. Bunu yapmak istiyor musunuz?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Bluetooth açılıyor..."</string>
     <string name="date_and_time" msgid="4114084177056654663">"Tarih ve saat ayarları"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"13:00"</string>
