--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -90,7 +90,10 @@
     <string name="bluetooth" msgid="5549625000628014477">"Bluetooth"</string>
     <string name="bluetooth_visibility" msgid="2930835434091839916">"Có thể phát hiện"</string>
     <string name="bluetooth_is_discoverable" msgid="1205694503775884903">"Có thể phát hiện trong <xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g> giây…"</string>
+    <string name="bluetooth_is_discoverable_always" msgid="8573385118329733931">"Có thể phát hiện"</string>
     <string name="bluetooth_not_discoverable" msgid="128269993123955177">"Đặt thiết bị ở chế độ có thể phát hiện"</string>
+    <string name="bluetooth_visibility_timeout" msgid="6634508002347847278">"Thời gian chờ phát hiện"</string>
+    <string name="bluetooth_visibility_timeout_summary" msgid="6483353842671501585">"Đặt thời gian thiết bị có thể phát hiện được"</string>
     <string name="bluetooth_lock_voice_dialing" msgid="3139322992062086225">"Khoá quay số bằng giọng nói"</string>
     <string name="bluetooth_lock_voice_dialing_summary" msgid="4741338867496787042">"Ngăn việc sử dụng trình quay số bluetooth khi màn hình bị khoá."</string>
     <string name="bluetooth_devices" msgid="1886018064039454227">"Thiết bị Bluetooth"</string>
@@ -115,7 +118,9 @@
     <string name="bluetooth_permission_request" msgid="1523129741266262748">"Yêu cầu quyền Bluetooth"</string>
     <string name="bluetooth_ask_enablement" msgid="2342558978033892004">"Ứng dụng trên điện thoại của bạn đang yêu cầu quyền bật Bluetooth. Bạn có muốn thực hiện thao tác này không?"</string>
     <string name="bluetooth_ask_discovery" msgid="669870705606180872">"Ứng dụng trên điện thoại của bạn đang yêu cầu quyền đặt điện thoại của bạn ở chế độ có thể phát hiện bởi các thiết bị Bluetooth khác trong <xliff:g id="TIMEOUT">%1$d</xliff:g> giây. Bạn có muốn thực hiện thao tác này không?"</string>
+    <string name="bluetooth_ask_lasting_discovery" msgid="3413855805411554871">"Một ứng dụng trên điện thoại của bạn đang yêu cầu cho phép đặt điện thoại của bạn ở chế độ “luôn có thể phát hiện được” bởi các thiết bị Bluetooth khác. Bạn có muốn thực hiện điều này không?"</string>
     <string name="bluetooth_ask_enablement_and_discovery" msgid="7220210326619399542">"Ứng dụng trên điện thoại của bạn đang yêu cầu quyền bật Bluetooth và đặt điện thoại của bạn ở chế độ có thể phát hiện bởi các thiết bị khác trong <xliff:g id="TIMEOUT">%1$d</xliff:g> giây. Bạn có muốn thực hiện thao tác này không?"</string>
+    <string name="bluetooth_ask_enablement_and_lasting_discovery" msgid="7471195931669103553">"Một ứng dụng trên điện thoại của bạn đang yêu cầu cho phép bật Bluetooth và đặt điện thoại của bạn ở chế độ có thể phát hiện được bởi các thiết bị khác. Bạn có muốn thực hiện điều này không?"</string>
     <string name="bluetooth_turning_on" msgid="3107102168379705771">"Đang bật Bluetooth…"</string>
     <string name="date_and_time" msgid="4114084177056654663">"Cài đặt ngày &amp; giờ"</string>
     <string name="date_time_12_hour_sample" msgid="3259617262618020574">"1:00 chiều"</string>
