--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -488,6 +488,8 @@
     <!-- Main Settings screen settings summary text for the "Wireless controls" setting -->
     <string name="radio_controls_summary">Manage Wi-Fi, Bluetooth, airplane mode, mobile networks, &amp; VPNs</string>
 
+    <string name="toolkit_title">Toolkit</string>
+
 
     <!-- mobile network settings screen, setting check box title -->
     <string name="roaming">Data roaming</string>
